--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-"Hello World"
+<h1>Xavier's CSE 592 Page</h1>
+<h2>Assignments</h2>
+<a href="./assignments/Assignment 2 Doodles.pdf">Assignment 2: Doodles</a>
