--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <h1>Xavier's CSE 592 Page</h1>
 <h2>Assignments</h2>
 <h3>Assignemnt 2: Doodles</h3>
-<a href="./2/Assignment 2 Doodles.pdf">Assignments 2</a>
+<ul>
+<li><a href="./2/Assignment 2 Doodles.pdf">Assignments 2</a></li>
+</ul>
 <h3>Assignment 3: LED Light Painting Part I</h3>
-<a href="./2/Assignment 3 LEDs 0.jpg">Assignment 3 LEDs 0.jpg</a>
-<a href="./2/Assignment 3 LEDs 1.jpg">Assignment 3 LEDs 1.jpg</a>
-<a href="./2/Assignment 3 LEDs 2.jpg">Assignment 3 LEDs 2.jpg</a>
-<a href="./2/Assignment 3 LEDs 3.jpg">Assignment 3 LEDs 3.jpg</a>
-<a href="./2/Assignment 3 LEDs 4.jpg">Assignment 3 LEDs 4.jpg</a>
-<a href="./2/Assignment 3 LEDs 5.jpg">Assignment 3 LEDs 5.jpg</a>
-<a href="./2/blinky_overdrive.fzz">Blinky Overdrive.fzz</a>
-<a href="./2/blinky_overdrive.ino">Blinky Overdrive.ino</a>
+<ul>
+<li><a href="./2/Assignment 3 LEDs 0.jpg">Assignment 3 LEDs 0.jpg</a></li>
+<li><a href="./2/Assignment 3 LEDs 1.jpg">Assignment 3 LEDs 1.jpg</a></li>
+<li><a href="./2/Assignment 3 LEDs 2.jpg">Assignment 3 LEDs 2.jpg</a></li>
+<li><a href="./2/Assignment 3 LEDs 3.jpg">Assignment 3 LEDs 3.jpg</a></li>
+<li><a href="./2/Assignment 3 LEDs 4.jpg">Assignment 3 LEDs 4.jpg</a></li>
+<li><a href="./2/Assignment 3 LEDs 5.jpg">Assignment 3 LEDs 5.jpg</a></li>
+<li><a href="./2/blinky_overdrive.fzz">Blinky Overdrive.fzz</a></li>
+<li><a href="./2/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
+</ul>
