--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <h2>Assignments</h2>
 <h3>Assignemnt 2: Doodles</h3>
 <ul>
-<li><a href="./2/Assignment 2 Doodles.pdf">Assignments 2</a></li>
+<li><a href=".assignments/2/Assignment 2 Doodles.pdf">Assignments 2</a></li>
 </ul>
 <h3>Assignment 3: LED Light Painting Part I</h3>
 <ul>
-<li><a href="./3/Assignment 3 LEDs 0.jpg">Assignment 3 LEDs 0.jpg</a></li>
-<li><a href="./3/Assignment 3 LEDs 1.jpg">Assignment 3 LEDs 1.jpg</a></li>
-<li><a href="./3/Assignment 3 LEDs 2.jpg">Assignment 3 LEDs 2.jpg</a></li>
-<li><a href="./3/Assignment 3 LEDs 3.jpg">Assignment 3 LEDs 3.jpg</a></li>
-<li><a href="./3/Assignment 3 LEDs 4.jpg">Assignment 3 LEDs 4.jpg</a></li>
-<li><a href="./3/Assignment 3 LEDs 5.jpg">Assignment 3 LEDs 5.jpg</a></li>
-<li><a href="./3/blinky_overdrive.fzz">Blinky Overdrive.fzz</a></li>
-<li><a href="./3/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 0.jpg">Assignment 3 LEDs 0.jpg</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 1.jpg">Assignment 3 LEDs 1.jpg</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 2.jpg">Assignment 3 LEDs 2.jpg</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 3.jpg">Assignment 3 LEDs 3.jpg</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 4.jpg">Assignment 3 LEDs 4.jpg</a></li>
+<li><a href=".assignments/3/Assignment 3 LEDs 5.jpg">Assignment 3 LEDs 5.jpg</a></li>
+<li><a href=".assignments/3/blinky_overdrive.fzz">Blinky Overdrive.fzz</a></li>
+<li><a href=".assignments/3/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
 </ul>
