--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
 <li><a href="xlebec.github.io/assignments/3/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
 </ul>
 <h3>Assignment 4: Photosensor</h3>
-<p>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.
+<p>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.</p>
