Skeleton of assignment 3

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 </ul>
 <h3>Assignment 2-1: LED Light Painting</h3>
 <ul>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 0.jpg">Assignment 2-1 LEDs 0.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 1.jpg">Assignment 2-1 LEDs 1.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 2.jpg">Assignment 2-1 LEDs 2.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 3.jpg">Assignment 2-1 LEDs 3.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 4.jpg">Assignment 2-1 LEDs 4.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/Assignment 2-1 LEDs 5.jpg">Assignment 2-1 LEDs 5.jpg</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/blinky_overdrive.fzz">Blinky Overdrive.fzz</a></li>
-<li><a href="https://xlebec.github.io/assignments/3/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 0.jpg">Assignment 2-1 LEDs 0.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 1.jpg">Assignment 2-1 LEDs 1.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 2.jpg">Assignment 2-1 LEDs 2.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 3.jpg">Assignment 2-1 LEDs 3.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 4.jpg">Assignment 2-1 LEDs 4.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/Assignment 2-1 LEDs 5.jpg">Assignment 2-1 LEDs 5.jpg</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/blinky_overdrive.fzz">Blinky Overdrive.fzz</a></li>
+<li><a href="https://xlebec.github.io/assignments/2-1/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
 </ul>
 <h3>Assignment 2-2: Photosensor</h3>
 <p>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.</p>
+<h4>Assignment 3-1: 2D Design</h4>
+<a href="https://xlebec.github.io/assignments/3-1/assignment3-1.html">Assignment 3-1</a>
