--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -1,1 +1,2 @@
+<h1>Assignment 3-1: 2D Design</h1>
 Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/Arduino-uno.pdf">measurements</a> by <a href="http://www.krekr.nl">Gregor van Egdom</a>.
