--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -1,2 +1,3 @@
 <h1>Assignment 3-1: 2D Design</h1>
-Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/Arduino-uno.pdf">measurements</a> by <a href="http://www.krekr.nl">Gregor van Egdom</a>.
+<p>Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/arduino_uno_r3_dimensions.png">measurements</a> from <a href="http://sandboxelectronics.com/?p=242">Sandbox Electronics</a>.</p>
+<p>Using these measurements and the fact that my acrylic sheet measures 11"x14"x0.093", I used <a href="http://www.makercase.com">MakerCase</a> to generate a basic box of interior dimensions _"x_"x_". This box
