--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -1,3 +1,21 @@
 <h1>Assignment 3-1: 2D Design</h1>
-<p>Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/arduino_uno_r3_dimensions.png">measurements</a> from <a href="http://sandboxelectronics.com/?p=242">Sandbox Electronics</a>.</p>
-<p>Using these measurements and the fact that my acrylic sheet measures 11"x14"x0.093", I used <a href="http://www.makercase.com">MakerCase</a> to generate a basic box of interior dimensions _"x_"x_". This box
+
+<h2>Box Design</h2>
+
+<h3>Measurements</h3>
+
+<p>As I had no board to measure and found no official schematics to consult, I consulted these Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/arduino_dimensions.png">measurements</a> by <a href="http://www.flickr.com/photos/johngineer/5484250200/sizes/o/in/photostream/">J. M. DeCristofaro ("johnengineer")</a> and these <a href="https://xlebec.github.io/assignments/3-1/Arduino-uno.pdf">measurements with height</a> by <a href="http://www.krekr.nl/content/arduino-uno-technical-drawing/">Gregor van Egdom</a>.</p>
+
+<h3>Mounting</h3>
+
+<p>Since the dimensions on these and other unofficial schematics differed slightly I could not rely on a perfect fit to hold the board in place. For this reason I decided to use the four holes in the board for mounting. Fortunately, DeCristofaro already provided the hole diameter and the most compatible standard bolt sizes. Using UNC 4-40 bolts and nuts along with small, non-conductive washers should provide a stable mounting for the Arduino.</p>
+
+<h3>Ease of Access</h3>
+
+<p>I decided to allow for a high degree of access to the board. Most critical was the hole to the power supply and USB port. To this end holes were cut from the front face of the board.</p>
+
+<p>I used these measurements, and the fact that my acrylic sheet measures 11"x14"x0.093", I used <a href="http://www.makercase.com">MakerCase</a> to generate a box of interior dimensions _"x_"x_". This box
+
+<h2>Laser Cutting Diagram</h2>
+
+<h2>Possible Problems</h2>
