--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -2,19 +2,23 @@
 
 <h2>Box Design</h2>
 
-<h3>Measurements</h3>
+<h3>Board Measurements</h3>
 
-<p>As I had no board to measure and found no official schematics to consult, I consulted these Arduino Uno <a href="https://xlebec.github.io/assignments/3-1/arduino_dimensions.png">measurements</a> by <a href="http://www.flickr.com/photos/johngineer/5484250200/sizes/o/in/photostream/">J. M. DeCristofaro ("johnengineer")</a> and these <a href="https://xlebec.github.io/assignments/3-1/Arduino-uno.pdf">measurements with height</a> by <a href="http://www.krekr.nl/content/arduino-uno-technical-drawing/">Gregor van Egdom</a>.</p>
+<p>With no board to measure and no official schematics to consult, I used these <a href="https://xlebec.github.io/assignments/3-1/arduino_dimensions.png">measurements</a> by <a href="http://www.flickr.com/photos/johngineer/5484250200/sizes/o/in/photostream/">J. M. DeCristofaro ("johnengineer")</a> and these <a href="https://xlebec.github.io/assignments/3-1/Arduino-uno.pdf">measurements with height</a> by <a href="http://www.krekr.nl/content/arduino-uno-technical-drawing/">Gregor van Egdom</a> to gain a sense of the size of the Arduino Uno.</p>
 
 <h3>Mounting</h3>
 
-<p>Since the dimensions on these and other unofficial schematics differed slightly I could not rely on a perfect fit to hold the board in place. For this reason I decided to use the four holes in the board for mounting. Fortunately, DeCristofaro already provided the hole diameter and the most compatible standard bolt sizes. Using UNC 4-40 bolts and nuts along with small, non-conductive washers should provide a stable mounting for the Arduino.</p>
+<p>The dimensions on these and other unofficial schematics differ slightly, so I did not want to rely on a perfect fit to hold the board in place. Instead, I would use the four holes in the board for mounting. Fortunately, DeCristofaro already provided the hole diameter and the most compatible standard bolt sizes. Using UNC 4-40 bolts and nuts along with small, non-conductive washers should provide a stable mounting for the Arduino.</p>
 
 <h3>Ease of Access</h3>
 
-<p>I decided to allow for a high degree of access to the board. Most critical was the hole to the power supply and USB port. To this end holes were cut from the front face of the board.</p>
+<p>I decided to allow for a high degree of access to the board. Most critical was the hole to the power supply and USB port. To this end holes were cut from the front face of the board. Slots were also cut from the top to allow access to the pins. There is no need to cut a hole for the LED as the acrylic is transparent.</p>
 
-<p>I used these measurements, and the fact that my acrylic sheet measures 11"x14"x0.093", I used <a href="http://www.makercase.com">MakerCase</a> to generate a box of interior dimensions _"x_"x_". This box
+<p>Finally, the box is held together by finger tabs. 5 of the surfaces can be glued together while the top can be pressed in or removed. T-slots were considered but ultimately rejected due to the relatively tight nature of the fit.</p>
+
+<h3>Box Dimensions</h3>
+
+<p>The interior of the box gives the board a 1/4" margin on all sides. I used <a href="http://www.makercase.com">MakerCase</a> to generate a box of interior dimensions 3.2" x 2.6" x 1" and thickness 0.093", the thickness of the acrylic sheet. This box was then edited in InkScape to add the holes described above.</p>
 
 <h2>Laser Cutting Diagram</h2>
 
