--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -18,8 +18,6 @@
 
 <h3>Box Dimensions</h3>
 
-<p>The interior of the box gives the board a 1/4" margin on all sides. I used <a href="http://www.makercase.com">MakerCase</a> to generate a box of interior dimensions 3.2" x 2.6" x 1" and thickness 0.093", the thickness of the acrylic sheet. This box was then edited in InkScape to add the holes described above.</p>
+<p>The interior of the box gives the board a 1/4" margin on all sides. I used <a href="http://www.makercase.com">MakerCase</a> to generate a box of interior dimensions 3.2" x 2.6" x 1" and thickness 0.093", the thickness of the acrylic sheet. The output at this point (accounting for a 0.2mm kerf) looked like <a href="https://xlebec.github.io/assignments/3-1/caseplans.svg">this</a>. This box was then edited in InkScape to add the holes described above.</p>
 
 <h2>Laser Cutting Diagram</h2>
-
-<h2>Possible Problems</h2>
