--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -14,7 +14,9 @@
 
 <p>I decided to allow for a high degree of access to the board. Most critical was the hole to the power supply and USB port. To this end holes were cut from the front face of the board. Slots were also cut from the top to allow access to the pins. There is no need to cut a hole for the LED as the acrylic is transparent.</p>
 
-<p>Finally, the box is held together by finger tabs. 5 of the surfaces can be glued together while the top can be pressed in or removed. T-slots were considered but ultimately rejected due to the relatively tight nature of the fit.</p>
+<h3>Joints</h3>
+
+<p>Yhe box is held together by finger tabs. 5 of the surfaces can be glued together while the top can be pressed in or removed. T-slots were considered but ultimately rejected due to the relatively tight nature of the fit.</p>
 
 <h3>Box Dimensions</h3>
 
