--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -27,4 +27,5 @@
 <li><a href="https://xlebec.github.io/assignments/3-1/caseplans_initial.svg">Initial plans</a> from <a href="http://www.makercase.com">MakerCase</a></li>
 <li><a href="https://xlebec.github.io/assignments/3-1/caseplans_with_board.svg">Plans with the board overlayed</a> shows how the hole measurements were obtained.</li>
 <li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final.svg">The final plans</a></li>
+<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final.svg">The final plans</a> in a more compact layout</li>
 </ol>
