--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <li><a href="https://xlebec.github.io/assignments/2-1/blinky_overdrive.ino">Blinky Overdrive.ino</a></li>
 </ul>
 <h3>Assignment 2-2: Photosensor</h3>
-<p>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.</p>
+<ul>
+<li>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.</li>
+</ul>
 <h4>Assignment 3-1: 2D Design</h4>
-<a href="https://xlebec.github.io/assignments/3-1/assignment3-1.html">Assignment 3-1</a>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/3-1/assignment3-1.html">Assignment 3-1</a></li>
+</ul>
