--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -16,7 +16,7 @@
 
 <h3>Joints</h3>
 
-<p>Yhe box is held together by finger tabs. 5 of the surfaces can be glued together while the top can be pressed in or removed. T-slots were considered but ultimately rejected due to the relatively tight nature of the fit.</p>
+<p>The box is held together by finger tabs. 5 of the surfaces can be glued together while the top can be pressed in or removed. T-slots were considered but ultimately rejected due to the relatively tight nature of the fit.</p>
 
 <h3>Box Dimensions</h3>
 
