--- a/assignments/3-1/assignment3-1.html
+++ b/assignments/3-1/assignment3-1.html
@@ -26,6 +26,8 @@
 <ol>
 <li><a href="https://xlebec.github.io/assignments/3-1/caseplans_initial.svg">Initial plans</a> from <a href="http://www.makercase.com">MakerCase</a></li>
 <li><a href="https://xlebec.github.io/assignments/3-1/caseplans_with_board.svg">Plans with the board overlayed</a> shows how the hole measurements were obtained.</li>
-<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final.svg">The final plans</a></li>
-<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final.svg">The final plans</a> in a more compact layout</li>
+<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final.svg">The original submission</a></li>
+<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final_compact.svg">The original plans</a> in a more compact layout</li>
+<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final_compact_rekerfed_with_board.svg">The plans</a> with the kerfing redone and the board overlayed</li>
+<li><a href="https://xlebec.github.io/assignments/3-1/caseplans_final_compact_rekerfed.svg">The final plans</a> with the kerfing redone</li>
 </ol>
