--- a/index.html
+++ b/index.html
@@ -23,3 +23,7 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/3-1/assignment3-1.html">Assignment 3-1</a></li>
 </ul>
+<h4>Assignment 3-2: 2D Fabrication</h4>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/3-2/assignment3-2.html">Assignment 3-1</a></li>
+</ul>
