--- a/assignments/3-2/assignment3-2.html
+++ b/assignments/3-2/assignment3-2.html
@@ -31,7 +31,7 @@
 <p>Despite all my reasoning, the cut case was the exact same dimension as the previous one. Whereas before I had chalked up the similarity to the very similar scale factors, this run made it clear that the print scaling setting was not being applied at all.</p>
 
 <h2>Results</h2>
-<img src="https://xlebec.github.io/3-2/case.jpg">
+<img src="https://xlebec.github.io/assignments/3-2/case.jpg">
 <p>Unfortunately, I did not have the opportunity to try another solution, as I wanted to make sure everyone else had a chance to use the laser cutter. Nevertheless, at the end of the session I still had a pair of cases for the Arduino Uno that would be functional in situations without a lot of movement, and would be entirely functional with only a small amount of modification - I could drill the mounting holes in the correct position without much difficulty. However, I would prefer to wait until my own Arduino comes in the mail before doing that, so I can mark the locations directly on the case with a sharpie and be certain that I'm drilling in the right place.</p>
 
 <h2>Takeaways</h2>
