--- a/index.html
+++ b/index.html
@@ -25,3 +25,7 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/3-2/assignment3-2.html">Assignment 3-2</a></li>
 </ul>
+<h4>Assignment 4-1: 3D Design and Render a Mouse</h4>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/4-1/assignment4-1.html">Assignment 4-1</a></li>
+</ul>
