--- a/assignments/4-1/assignment4-1.html
+++ b/assignments/4-1/assignment4-1.html
@@ -1,10 +1,10 @@
 <h1>Assignment 4-1: 3D Design and Rendering a Mouse</h1>
 <p>A sleek, smooth mouse.</p>
-<img src="https://xlebec.github.io/4-1/mouse_render.png"></img>
+<img src="https://xlebec.github.io/assignments/4-1/mouse_render.png"></img>
 <h2>Design</h2>
 <p>This mouse was loosely based off of my Logitech mouse below, but with a sleeker look. Buttons and scroll wheel weren't modelled, as the idea is that the surface itself would have trackpad like features for scrolling, as well as hidden buttons without clear boundaries, similar to Apple's mice. By emphasizing aesthetics, however, mild compromises are made on ergonomics and practicality. Without clearly demarked buttons and tacticle scrolling feedback, this design advertises its purpose less and provides the user with less direct information on scrolling. Moreover, from certain views (such as the first angle rendered) the front and back of this wireless, buttonless, wheeless mouse are difficult to differentiate.</p>
-<img src="https://xlebec.github.io/4-1/mouse_real.jpg"></img>
+<img src="https://xlebec.github.io/assignments/4-1/mouse_real.jpg"></img>
 <h2>Drafting</h2>
 <p>The mouse was created in FreeCad. I drew three separate layers with the sketching tools. The middle such layer is shown below. Each of the three layers were strictly constrained. Once these layers were drawn, a single loft with the solid object feature enabled completed the shape of the mouse. 
-<img src="https://xlebec.github.io/4-1/mouse_constraints.png"></img><br/>
-<img src="https://xlebec.github.io/4-1/mouse_render2.png"></img>
+<img src="https://xlebec.github.io/assignments/4-1/mouse_constraints.png"></img><br/>
+<img src="https://xlebec.github.io/assignments/4-1/mouse_render2.png"></img>
