--- a/index.html
+++ b/index.html
@@ -29,3 +29,7 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/4-1/assignment4-1.html">Assignment 4-1</a></li>
 </ul>
+<h4>Assignment 4-2: 3D Printing</h4>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/4-21/assignment4-2.html">Assignment 4-1</a></li>
+</ul>
