--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
-<li><a href="https://xlebec.github.io/assignments/2/Assignment 2 Doodles.pdf">Assignment 2-1</a></li>
+<li><a href="https://xlebec.github.io/assignments/2/Assignment 2 Doodles.pdf">Assignment 1</a></li>
 </ul>
 <h3>Assignment 2-1: LED Light Painting</h3>
 <ul>
