--- a/assignments/4-2/assignment4-2.html
+++ b/assignments/4-2/assignment4-2.html
@@ -1,10 +1,10 @@
 <h1>Assignment 4-2: 3D Printing</h1>
 <h2>Files</h2>
 <ul>
-<li>General, printable model: <a href="https://github.xlebec.io/assignments/4-2/mouse.stl">mouse.stl</a></li>
-<li>FlashPrint model: <a href="https://github.xlebec.io/assignments/4-2/mouse.fpp">mouse.fpp</a></li>
-<li>Slice file for printing in ABS (both nozzles): <a href="https://github.xlebec.io/assignments/4-2/mouse_abs.g">mouse_abs.g</a></li>
-<li>Slice file for printing in PLA (both nozzles): <a href="https://github.xlebec.io/assignments/4-2/mouse_pla.g">mouse_pla.g</a></li>
+<li>General, printable model: <a href="https://xlebec.github.io/assignments/4-2/mouse.stl">mouse.stl</a></li>
+<li>FlashPrint model: <a href="https://xlebec.github.io/assignments/4-2/mouse.fpp">mouse.fpp</a></li>
+<li>Slice file for printing in ABS (both nozzles): <a href="https://xlebec.github.io/assignments/4-2/mouse_abs.g">mouse_abs.g</a></li>
+<li>Slice file for printing in PLA (both nozzles): <a href="https://xlebec.github.io/assignments/4-2/mouse_pla.g">mouse_pla.g</a></li>
 </ul>
 <h2>Procedure</h2>
 <h3>First Pass</h3>
