--- a/assignments/4-2/assignment4-2.html
+++ b/assignments/4-2/assignment4-2.html
@@ -7,9 +7,22 @@
 <li>Slice file for printing in PLA (both nozzles): <a href="https://xlebec.github.io/assignments/4-2/mouse_pla.g">mouse_pla.g</a></li>
 </ul>
 <h2>Procedure</h2>
-<h3>First Pass</h3>
+<h3>Initial Procedure Idea</h3>
 <p>I decided to print in low resolution with a small, hexagonal fill density of 5% to reduce filament requirement and printing time, since this is only a first draft of a rough prototype. Since the item already has a flat base, I decided not to use a raft. The item required no supports.</p>
+<h3>First Printing</h3>
+<p>Since there was limited time for a large number of students at the 3d printer, we combined multiple mice in one print job. To accomodate this, all the mice were scaled down.</p>
+<p>Based on advice from the previous group, we used PLA, with a nozzle temperature of 210 degrees C and a surface temperature of 80 degrees C.</p>
+<p>I was not present when the first printing was stopped, and do not know why it was stopped since the pieces that had been removed looked fine to me so far.</p>
+<h3>Second Printing</h3>
+<p>The second printing was failing as I came in an hour after kicking off the first printing to check on the progress. One of the pieces came loose, and eventually everything got jumbled together. I stopped the printing and started the third and probably final run.</p>
+<p>The only difference I know for sure about the second printing other than the results is that struts were added to one of the mice, which had a bug in the 3D modelling that made most of the base float above the platform. These struts did not seem to resolve the associated problem though, whatever it was.</p>
+<h3>Third Printing</h3>
+<p>To reduce the probability of pieces coming loose, I used the default temperature settings for a low res run, which was a nozzle temperature of 200 degrees C and a surface temperature of 50 degrees C. When the previous group was removing their pieces, they noticed it was easier to scrape them off the surface while the surface was warm, so I hypothesized that a too-warm surface could contribute in objects coming loose. Additionally, I removed the 3D model with the bug from the job, and rotated a mouse which was standing on its second narrowest face to its side (its model had feet which prevented it from being printed rightside-up).</p>
 <h2>Photos</h2>
-<p>Coming 2/28/17<p>
+<p>Photos courtesy of Sushant Ojal</p>
+<img src="https://xlebec.github.io/assignments/4-2/3dprint_mouse2.jpg"></img>
+<p>When I returned to the lab, the machine was on its second attempt. The first attempt resulted in the pieces on the right. I do not know why it was stopped. The second attempt was resulting on the mess on the left.</p>
+<img src="https://xlebec.github.io/assignments/4-2/3dprint_mouse1.jpg"></img>
+<p>The final attempt, still processing as the lab was closing. We shall see tomorrow if the attempt is successful.</p>
 <h2>Conclusions</h2>
-<p>Coming 2/28/17</p>
+<p>As of 10:40pm EST on 2/27/17, the 3D print job should be finished, but the building is closed. Final results will be seen right before class tomorrow.</p>
