--- a/assignments/4-2/assignment4-2.html
+++ b/assignments/4-2/assignment4-2.html
@@ -23,6 +23,6 @@
 <img src="https://xlebec.github.io/assignments/4-2/3dprint_mouse2.jpg"></img>
 <p>When I returned to the lab, the machine was on its second attempt. The first attempt resulted in the pieces on the right. I do not know why it was stopped. The second attempt was resulting on the mess on the left.</p>
 <img src="https://xlebec.github.io/assignments/4-2/3dprint_mouse1.jpg"></img>
-<p>The final attempt seemed to fail for some reason. THere was a higher concentration of loose fillaments, so perhaps the temperatures were too low.</p>
+<p>The final attempt seemed to fail for some reason. There was a higher concentration of loose filaments, so perhaps the temperatures were too low.</p>
 <h2>Conclusions</h2>
-<p>Since the results of the first run seemed to be the best for my mouse, I hypothesize that using the temperature settings from the first run with the reorientation and removal of the defective model of the last run would result in a successful run.</p>
+<p>Since the results of the first run seemed to be the best for my mouse, I hypothesize that using the temperature settings from the first run with the reorientation and removal of the model with the flaw would result in a successful run.</p>
