--- a/index.html
+++ b/index.html
@@ -33,3 +33,7 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/4-2/assignment4-2.html">Assignment 4-2</a></li>
 </ul>
+<h5>Assignment 5: Sketching, Problems and Solutions</h5>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/5/Autofocals.pptx">Assignment 5</a></li>
+</ul>
