--- a/index.html
+++ b/index.html
@@ -37,3 +37,6 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/5/Autofocals.pptx">Assignment 5</a></li>
 </ul>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/6/assignment6.html">Assignment 6</a></li>
+</ul>
