--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <ul>
 <li><a href="https://xlebec.github.io/assignments/5/Autofocals.pptx">Assignment 5</a></li>
 </ul>
+<h5>Assignment 6: Comms and Viz</h5>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/6/assignment6.html">Assignment 6</a></li>
 </ul>
