--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>Xavier's CSE 592 Page</h1>
+<h2>User Study</h2>
+Please take my <a href="https://docs.google.com/forms/d/1-6tFvREFCTAhHNEEWZ_mdXCKSfVr4KOubtjfIr1hWg4/edit#responses">survey.</a>
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
@@ -17,27 +19,27 @@
 </ul>
 <h3>Assignment 2-2: Photosensor</h3>
 <p>See <a href="https://brianyang.me/hci/photocell/photocell.html">Brian's site</a> for submission.</p>
-<h4>Assignment 3-1: 2D Design</h4>
+<h3>Assignment 3-1: 2D Design</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/3-1/assignment3-1.html">Assignment 3-1</a></li>
 </ul>
-<h4>Assignment 3-2: 2D Fabrication</h4>
+<h3>Assignment 3-2: 2D Fabrication</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/3-2/assignment3-2.html">Assignment 3-2</a></li>
 </ul>
-<h4>Assignment 4-1: 3D Design and Render a Mouse</h4>
+<h3>Assignment 4-1: 3D Design and Render a Mouse</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/4-1/assignment4-1.html">Assignment 4-1</a></li>
 </ul>
-<h4>Assignment 4-2: 3D Printing</h4>
+<h3>Assignment 4-2: 3D Printing</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/4-2/assignment4-2.html">Assignment 4-2</a></li>
 </ul>
-<h5>Assignment 5: Sketching, Problems and Solutions</h5>
+<h3>Assignment 5: Sketching, Problems and Solutions</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/5/Autofocals.pptx">Assignment 5</a></li>
 </ul>
-<h5>Assignment 6: Comms and Viz</h5>
+<h3>Assignment 6: Comms and Viz</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/6/assignment6.html">Assignment 6</a></li>
 </ul>
