better survey link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Xavier's CSE 592 Page</h1>
 <h2>User Study</h2>
-Please take my <a href="https://docs.google.com/forms/d/1-6tFvREFCTAhHNEEWZ_mdXCKSfVr4KOubtjfIr1hWg4/edit#responses">survey.</a>
+Please take my <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTjG9FcYv_D58oFiHM8XoX0jmgI_CNw6ADndTwZZGTTbMgHw/viewform">survey.</a>
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
