final project presentation and paper

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <h1>Xavier's CSE 592 Page</h1>
-<h2>User Study</h2>
-Please take my <a href="https://docs.google.com/forms/d/1-6tFvREFCTAhHNEEWZ_mdXCKSfVr4KOubtjfIr1hWg4/edit#responses">survey.</a>
+<h2>Project</h2>
+<ul>
+<li><a href="https://xlebec.github.io/project/xlebec_project_paper.pdf">Project Paper</a></li>
+<li><a href="https://xlebec.github.io/project/xlebec_project_presentation.pptx">Project Presentation</a></li>
+</ul>
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
