follows course structure better

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <h1>Xavier's CSE 592 Page</h1>
-<h2>Project</h2>
-<ul>
-<li><a href="https://xlebec.github.io/project/xlebec_project_paper.pdf">Project Paper</a></li>
-<li><a href="https://xlebec.github.io/project/xlebec_project_presentation.pptx">Project Presentation</a></li>
-</ul>
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
@@ -45,4 +40,21 @@
 <h3>Assignment 6: Comms and Viz</h3>
 <ul>
 <li><a href="https://xlebec.github.io/assignments/6/assignment6.html">Assignment 6</a></li>
+</ul>
+<h3>Assignment 7: Programming</h3>
+<ul>
+<li><a href="https://xlebec.github.io/assignments/6/glasses.fzz">Assignment 7</a></li>
+</ul>
+<h3>Assignment 8: Hardware</h3>
+<ul>
+<li>Please see the final presentation and report for a description of the hardware.</li>
+</ul>
+<h3>Assignment 9: User Study</h3>
+<ul>
+<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTjG9FcYv_D58oFiHM8XoX0jmgI_CNw6ADndTwZZGTTbMgHw/viewform">Assignment 9</a></li>
+</ul>
+<h3>Assignments 10: Paper and Presentation</h3>
+<ul>
+<li><a href="https://xlebec.github.io/project/xlebec_project_paper.pdf">Project Paper</a></li>
+<li><a href="https://xlebec.github.io/project/xlebec_project_presentation.pptx">Project Presentation</a></li>
 </ul>
