--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 </ul>
 <h3>Assignment 7: Programming</h3>
 <ul>
-<li><a href="https://xlebec.github.io/assignments/6/glasses.fzz">Assignment 7</a></li>
+<li><a href="https://xlebec.github.io/assignments/7/Control.ino">Control.ino</a></li>
 </ul>
 <h3>Assignment 8: Hardware</h3>
 <ul>
 <li>Please see the final presentation and report for a description of the hardware.</li>
+<li><a href="https://xlebec.github.io/assignments/8/glasses.fzz">Fritzing circuit sketch</a></li>
 </ul>
 <h3>Assignment 9: User Study</h3>
 <ul>
-<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTjG9FcYv_D58oFiHM8XoX0jmgI_CNw6ADndTwZZGTTbMgHw/viewform">Assignment 9</a></li>
+<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTjG9FcYv_D58oFiHM8XoX0jmgI_CNw6ADndTwZZGTTbMgHw/viewform">User study Google form</a></li>
 </ul>
 <h3>Assignments 10: Paper and Presentation</h3>
 <ul>
