--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <h1>Xavier's CSE 592 Page</h1>
+<h2>Final Report</h2>
+<ul>
+<li><a href="https://xlebec.github.io/project/xlebec_project_paper.pdf">Project Paper</a></li>
+<li><a href="https://xlebec.github.io/project/xlebec_project_presentation.pptx">Project Presentation</a></li>
+</ul>
 <h2>Assignments</h2>
 <h3>Assignemnt 1: Doodles</h3>
 <ul>
@@ -54,8 +59,7 @@
 <ul>
 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTjG9FcYv_D58oFiHM8XoX0jmgI_CNw6ADndTwZZGTTbMgHw/viewform">User study Google form</a></li>
 </ul>
-<h3>Assignments 10: Paper and Presentation</h3>
+<h3>Assignments 10: Final Prototype</h3>
 <ul>
-<li><a href="https://xlebec.github.io/project/xlebec_project_paper.pdf">Project Paper</a></li>
-<li><a href="https://xlebec.github.io/project/xlebec_project_presentation.pptx">Project Presentation</a></li>
+<li>Demonstrated in class</li>
 </ul>
